任务二的第二个关于时间的小任务提交

--- a/task01--1.html
+++ b/task01--1.html
@@ -122,7 +122,8 @@
 
 <section>
     <label id="oTar">请输入您的兴趣爱好</label>
-    <textarea id="oText" type="text" ></textarea>
+    <textarea id="oText" type="text" >
+    </textarea>
     <input id="oBtn" type="button" value="确认">
     <label id="oTag"></label>
     <p id="oP"></p>
